--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,29 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(Windows) Запустить",
-      "type": "cppvsdbg",
+      "name": "(gdb) Запустить",
+      "type": "cppdbg",
       "request": "launch",
-      "program": "c${workspaceFolderBasename}",
+      "program": "${file}",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
-      "console": "externalTerminal"
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/path/to/gdb",
+      "setupCommands": [
+        {
+          "description": "Включить автоматическое форматирование для gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        },
+        {
+          "description": "Задать для варианта приложения дизассемблирования значение Intel",
+          "text": "-gdb-set disassembly-flavor intel",
+          "ignoreFailures": true
+        }
+      ]
     },
     {
       "name": "C/C++ Runner: Debug Session",
