--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,13 @@
     "ostream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "queue": "cpp",
+    "bloch": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp",
+    "sstream": "cpp"
   }
 }
